# homer2

./: .gitignore  CMakeLists.txt  README.md  homer2.c
homer2_base/: CMakeLists.txt
homer2_base/homer2_i2c/: CMakeLists.txt  homer2_i2c.cxx  homer2_i2c.hpp
homer2_base/homer2_logging/: CMakeLists.txt  homer2_logging.cxx  homer2_logging.hpp
homer2_base/homer2_util/: CMakeLists.txt  homer2_util.cxx  homer2_util.hpp
homer2_sensor/: CMakeLists.txt
homer2_sensor/homer2_bme68x/: CMakeLists.txt
homer2_sensor/homer2_bme68x/include/: homer2_bme68x.cxx  homer2_bme68x.hpp
homer2_sensor/homer2_bme68x/src/: homer2_bme68x_base.cxx  homer2_bme68x_base.hpp  homer2_bme68x_sensor.cxx  homer2_bme68x_sensor.hpp
homer2_sensor/homer2_bmp3xx/: CMakeLists.txt
homer2_sensor/homer2_bmp3xx/include/: homer2_bmp3xx.cxx  homer2_bmp3xx.hpp
homer2_sensor/homer2_bmp3xx/src/: homer2_bmp3xx_base.cxx  homer2_bmp3xx_base.hpp  homer2_bmp3xx_sensor.cxx  homer2_bmp3xx_sensor.hpp
homer2_sensor/homer2_pmsx00x/: CMakeLists.txt
homer2_sensor/homer2_pmsx00x/include/: homer2_pmsx00x.cxx  homer2_pmsx00x.hpp
homer2_sensor/homer2_pmsx00x/src/: homer2_pmsx00x_base.cxx  homer2_pmsx00x_base.hpp  homer2_pmsx00x_sensor.cxx  homer2_pmsx00x_sensor.hpp
homer2_sensor/homer2_sgp40/: CMakeLists.txt
homer2_sensor/homer2_sgp40/include/: homer2_sgp40.cxx  homer2_sgp40.hpp
homer2_sensor/homer2_sgp40/src/: homer2_sgp40_base.cxx  homer2_sgp40_base.hpp  homer2_sgp40_sensor.cxx  homer2_sgp40_sensor.hpp
homer2_sensor/homer2_sht4x/: CMakeLists.txt
homer2_sensor/homer2_sht4x/include/: homer2_sht4x.cxx  homer2_sht4x.hpp
homer2_sensor/homer2_sht4x/src/: homer2_sht4x_base.cxx  homer2_sht4x_base.hpp  homer2_sht4x_sensor.cxx  homer2_sht4x_sensor.hpp
homer2_sensor/homer2_sunrise/: CMakeLists.txt
homer2_sensor/homer2_sunrise/include/: homer2_sunrise.cxx  homer2_sunrise.hpp
homer2_sensor/homer2_sunrise/src/: homer2_sunrise_base.cxx  homer2_sunrise_base.hpp  homer2_sunrise_sensor.cxx  homer2_sunrise_sensor.hpp
rpi/: homer2_grafana_dashboard.json  playbook.yaml
rpi/ansible-grafana-role/defaults/: main.yml
rpi/ansible-grafana-role/handlers/: main.yml
rpi/ansible-grafana-role/meta/: main.yml
rpi/ansible-grafana-role/tasks/: install.yml  main.yml  postinstall.yml  preinstall.yml  repo.yml
rpi/ansible-victoriametrics-role/: SOURCE
rpi/ansible-victoriametrics-role/defaults/: main.yml
rpi/ansible-victoriametrics-role/tasks/: install.yml  install_vmutils.yml
src/: homer2_config.h.in  homer2_init.cpp  homer2_init.hpp  homer2_main.cpp  homer2_main.h  homer2_pusher.cpp  homer2_pusher.hpp  homer2_sensor.cpp  homer2_sensor.hpp
